# wallet-poc

./: .gitignore  Cargo.toml  README.md  run_integration_tests.sh
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
signingclient/: Cargo.toml
signingclient/src/: demo.rs  main.rs
signingcommon/: Cargo.toml
signingcommon/src/: lib.rs
signingserver/: Cargo.toml
signingserver/certs/: cert.pem  key.pem
signingserver/src/: handlers.rs  main.rs  models.rs  state.rs
