[package]
name = "integration_tests"
version.workspace = true
edition.workspace = true

[dependencies]
signingcommon = { path = "../signingcommon" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3"
rand = "0.8"

[dev-dependencies]
