[package]
name = "signingclient"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sign"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
