[package]
name = "signingclient"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sign"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[dependencies]
signingcommon = { path = "../signingcommon" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
