[package]
name = "signingserver"
version.workspace = true
edition.workspace = true

[[bin]]
name = "signingserver"
path = "src/main.rs"

[dependencies]
signingcommon = { path = "../signingcommon" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"